--- a/webapp/styles/Home.module.css
+++ b/webapp/styles/Home.module.css
@@ -1,8 +1,8 @@
-.container {
+.header {
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  /* justify-content: right; */
 }
